# diving-board

./: .gitignore  README.md  diving-board.code-workspace  pyproject.toml
.claude/: settings.json
src/diving_board/: __init__.py  base_api_endpoint.py  constants.py  exceptions.py  protocol.py  update_files.py
src/diving_board/_tools/: rebuild_models.py  remove_redundant_files.py
src/diving_board/adjacent_series/: __init__.py  models.json  models.py  schema.json
src/diving_board/other_seasons/: __init__.py  models.py  schema.json
src/diving_board/playlist/: __init__.py  models.json  models.py  schema.json
src/diving_board/playlist/bucket/: __init__.py  model.json  model.py
src/diving_board/playlist/bucket_playlist/: __init__.py  models.py
src/diving_board/playlist/hero/: __init__.py  model.json  model.py
src/diving_board/playlist/tabs/: __init__.py  model.py
src/diving_board/playlist/text_block/: __init__.py  (+1 more)
src/diving_board/schedule/: __init__.py  models.json  models.py  schema.json
src/diving_board/search/: __init__.py  models.json  models.py
src/diving_board/season/: __init__.py  models.json  models.py  schema.json
src/diving_board/season_bucket/: __init__.py  models.py  schema.json
src/diving_board/series/: __init__.py  models.json  models.py
src/diving_board/tools/: rebuild_models.py  remove_redundant_files.py
src/diving_board/vod/: __init__.py  models.json  models.py  schema.json
tests/: conftest.py  test_adjacent_series.py  test_diving_board.py  test_schedule.py  test_search.py  test_season.py  test_series.py  test_vod.py  utils.py
(+92 files in other folders)
